==> Lib-Tech/New_Pro/future/APP/oled.c <==
#include "stm32f10x.h"
#include "spi.h"
#include "oled.h"

VOID LED_WrDat(UCHAR8 ucData)
{
    //LED_CMD_1();//   = 1;
	GPIO_SetBits(GPIOB, GPIO_Pin_12);
    SPI_Send_Byte(ucData);
    return;
}

VOID LED_WrCmd(UCHAR8 ucCmd)
{ 
    //LED_CMD_0();//  = 0;
	GPIO_ResetBits(GPIOB, GPIO_Pin_12);
    SPI_Send_Byte(ucCmd);
 
    return;
}

VOID LED_Init(VOID)        
{
    UCHAR8 i;
	GPIO_InitTypeDef GPIO_InitStructure;

	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_1;				     //RST
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOB, &GPIO_InitStructure);
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_12;				     //CMD
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOB, &GPIO_InitStructure);			
    GPIO_ResetBits(GPIOB, GPIO_Pin_1);
    for(i = 0; i < 200;  i++)
    {
        GPIO_ResetBits(GPIOB, GPIO_Pin_1);//LED_RST_0();               //从上电到下面开始初始化要有足够的时间，即等待RC复位完毕      
    }  
    //LED_RST_1();
    //LED_CS_0(); 
    GPIO_SetBits(GPIOB, GPIO_Pin_1);
    SetDisplayOnOff(0x00);     // Display Off (0x00/0x01)
    SetDisplayClock(0x80);     // Set Clock as 100 Frames/Sec
    SetMultiplexRatio(0x3F);   // 1/64 Duty (0x0F~0x3F)
    SetDisplayOffset(0x00);    // Shift Mapping RAM Counter (0x00~0x3F)
    SetStartLine(0x00);        // Set Mapping RAM Display Start Line (0x00~0x3F)
    SetChargePump(0x04);       // Enable Embedded DC/DC Converter (0x00/0x04)
    SetAddressingMode(0x02);   // Set Page Addressing Mode (0x00/0x01/0x02)
    SetSegmentRemap(0x01);     // Set SEG/Column Mapping     0x00左右反置 0x01正常
    SetCommonRemap(0x08);      // Set COM/Row Scan Direction 0x00上下反置 0x08正常
    SetCommonConfig(0x10);     // Set Sequential Configuration (0x00/0x10)
    SetContrastControl(0xCF);  // Set SEG Output Current
    SetPrechargePeriod(0xF1);  // Set Pre-Charge as 15 Clocks & Discharge as 1 Clock
    SetVCOMH(0x40);            // Set VCOM Deselect Level
    SetEntireDisplay(0x00);    // Disable Entire Display On (0x00/0x01)
    SetInverseDisplay(0x00);   // Disable Inverse Display On (0x00/0x01)  
    SetDisplayOnOff(0x01);     // Display On (0x00/0x01)
    LED_Fill(0x00);            // 初始清屏
    LED_SetPos(0,0);

    return;
}
