==> ruansongbo/TIVA_ws/workspace_v6_0/GPS/OLED.c <==
#include "OLED.h"
#include <stdint.h>
#include <stdbool.h>
#include "inc/hw_memmap.h"
#include "driverlib/ssi.h"
#include "driverlib/pin_map.h"
#include "driverlib/sysctl.h"
#include "driverlib/gpio.h"
#include "driverlib/uart.h"
#include "utils/uartstdio.h"
#define SCLK(x)     x ? GPIOPinWrite(GPIO_PORTA_BASE, GPIO_PIN_4,GPIO_PIN_4) : GPIOPinWrite(GPIO_PORTA_BASE, GPIO_PIN_4,0x00)
#define MOSI(x)     x ? GPIOPinWrite(GPIO_PORTA_BASE, GPIO_PIN_5,GPIO_PIN_5) : GPIOPinWrite(GPIO_PORTA_BASE, GPIO_PIN_5,0x00)
#define RST(x)      x ? GPIOPinWrite(GPIO_PORTA_BASE, GPIO_PIN_6,GPIO_PIN_6) : GPIOPinWrite(GPIO_PORTA_BASE, GPIO_PIN_6,0x00)
#define DC(x)       x ? GPIOPinWrite(GPIO_PORTA_BASE, GPIO_PIN_7,GPIO_PIN_7) : GPIOPinWrite(GPIO_PORTA_BASE, GPIO_PIN_7,0x00)

VOID LED_WrDat(UCHAR8 ucData)
{
    UCHAR8 i = 8;
    DC(1);
    SCLK(0);

    while (i--)
    {
        if (ucData & 0x80)
        {
            MOSI(1);
        }
        else
        {
            MOSI(0);
        }

        SCLK(1);
        SysCtlDelay(1);
        SCLK(0);
        ucData <<= 1;
    }

    return;
}

VOID LED_WrCmd(UCHAR8 ucCmd)
{
    UCHAR8 i = 8;
    DC(0);
    SCLK(0);
    while (i--)
    {
        if (ucCmd & 0x80)
        {
            MOSI(1);
        }
        else
        {
            MOSI(0);
        }
        SCLK(1);
        SysCtlDelay(1);
        SCLK(0);
        ucCmd <<= 1;
    }

    return;
}

VOID LED_Init(VOID)
{
    SCLK(0);
    RST(0);

    SysCtlDelay(312);

    RST(1);

    SetDisplayOnOff(0x00);     // Display Off (0x00/0x01)
    SetDisplayClock(0x80);     // Set Clock as 100 Frames/Sec
    SetMultiplexRatio(0x3F);   // 1/64 Duty (0x0F~0x3F)
    SetDisplayOffset(0x00);    // Shift Mapping RAM Counter (0x00~0x3F)
    SetStartLine(0x00);        // Set Mapping RAM Display Start Line (0x00~0x3F)
    SetChargePump(0x04);       // Enable Embedded DC/DC Converter (0x00/0x04)
    SetAddressingMode(0x02);   // Set Page Addressing Mode (0x00/0x01/0x02)
    SetSegmentRemap(0x01);     // Set SEG/Column Mapping     0x00左右反置 0x01正常
    SetCommonRemap(0x08);      // Set COM/Row Scan Direction 0x00上下反置 0x08正常
    SetCommonConfig(0x10);     // Set Sequential Configuration (0x00/0x10)
    SetContrastControl(0xCF);  // Set SEG Output Current
    SetPrechargePeriod(0xF1);  // Set Pre-Charge as 15 Clocks & Discharge as 1 Clock
    SetVCOMH(0x40);            // Set VCOM Deselect Level
    SetEntireDisplay(0x00);    // Disable Entire Display On (0x00/0x01)
    SetInverseDisplay(0x00);   // Disable Inverse Display On (0x00/0x01)
    SetDisplayOnOff(0x01);     // Display On (0x00/0x01)
    LED_Fill(0x00);            // 初始清屏
    LED_SetPos(0,0);

    return;
}
